--- a/src/index.css
+++ b/src/index.css
@@ -14,4 +14,9 @@ html, body {
     min-height: 100%;
 }
 
-
+.logo {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
