--- a/src/components/authentication/authentication.css
+++ b/src/components/authentication/authentication.css
@@ -6,4 +6,19 @@ input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
     -webkit-box-shadow: none !important;
     transition: background-color 5000s ease-in-out 0s;
+    font-weight: 500 !important;
+    font-size: 16px !important;
+    color: #f2f2f2 !important;
+}
+
+.ant-select-selector {
+    text-align: left !important;
+    color: #f2f2f2;
+    background: none !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.ant-select-selector:focus {
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
 }
