--- a/src/components/authentication/authentication.css
+++ b/src/components/authentication/authentication.css
@@ -8,12 +8,12 @@ input:-webkit-autofill:active {
     transition: background-color 5000s ease-in-out 0s;
     font-weight: 500 !important;
     font-size: 16px !important;
-    color: #f2f2f2 !important;
+    color: #ece7e2 !important;
 }
 
 .ant-select-selector {
     text-align: left !important;
-    color: #f2f2f2;
+    color: #ece7e2;
     background: none !important;
     border: none !important;
     box-shadow: none !important;
