--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html, body {
 .antd-error .ant-message-notice-content {
     min-width: 20% !important;
     background: #520202 !important;
-    color: #f2f2f2 !important;
+    color: #ece7e2 !important;
     border: 2px solid #520202 !important;
 }
 
@@ -35,26 +35,21 @@ html, body {
 
 .hover-input input {
     border-radius: 10px !important;
-    border-color: #f2f2f2 !important;
+    border-color: #ece7e2 !important;
 }
 
 .hover-input:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
-    border-color: #f2f2f2 !important;
+    border-color: #ece7e2 !important;
 }
 
-.hover-input input:focus {
+.hover-input:focus-within {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
-    border-color: #f2f2f2 !important;
+    border-color: #ece7e2 !important;
 }
 
-.hover-input .ant-select {
+.hover-input .ant-select-selection-search-input {
     border-radius: 10px !important;
-}
-
-.hover-input .ant-select:focus {
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
-    border-color: #f2f2f2 !important;
 }
 
 input{
@@ -66,4 +61,22 @@ input{
     font-size: 16px !important;
     box-shadow: none !important;
     background: none !important;
+}
+
+.ant-select-selection-placeholder {
+    color: #b2b0af !important;
+    font-weight: 500 !important;
+    font-size: 16px !important;
+}
+
+.ant-select-arrow {
+    color: #b2b0af !important;
+    font-weight: 500 !important;
+    font-size: 16px !important;
+}
+
+.ant-select-selection-item {
+    color: #f2f2f2 !important;
+    font-weight: 500 !important;
+    font-size: 16px !important;
 }
