--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,22 @@ html, body {
     background: var(--primary-background);
 }
 
+body {
+    animation: fadeInAnimation ease 2s;
+}
+
+@keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 #root {
     min-height: 100%;
+    animation: 1s ease-in-out;
 }
 
 .antd-error .ant-message-notice-content {
