--- a/src/components/util/layout/layout.css
+++ b/src/components/util/layout/layout.css
@@ -27,7 +27,14 @@
     color: #000 !important;
 }
 
-.ant-menu-light.ant-menu-horizontal >.ant-menu-item-selected::after {
+.ant-menu-light.ant-menu-horizontal >.ant-menu-item-selected::after,
+.ant-menu-light.ant-menu-horizontal >.ant-menu-item-active::after
+{
     border-bottom-color: white !important;
-    border-bottom-width: 2px;
+    border-bottom-width: 2px !important;
+}
+
+.ant-menu-submenu-selected::after {
+    border-bottom-color: white !important;
+    border-bottom-width: 2px !important;
 }
