--- a/src/components/authentication/authentication.css
+++ b/src/components/authentication/authentication.css
@@ -22,3 +22,15 @@ input:-webkit-autofill:active {
 .ant-select-selector:focus {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
 }
+
+.expandable-element {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: max-height 0.3s ease-out, opacity 0.3s ease-out;
+}
+
+.expandable-element.expanded {
+    max-height: 1000px; /* Adjust as necessary */
+    opacity: 1;
+}
