--- a/src/components/util/layout/layout.css
+++ b/src/components/util/layout/layout.css
@@ -28,7 +28,9 @@
 }
 
 .ant-menu-light.ant-menu-horizontal >.ant-menu-item-selected::after,
-.ant-menu-light.ant-menu-horizontal >.ant-menu-item-active::after
+.ant-menu-light.ant-menu-horizontal >.ant-menu-item-active::after,
+.ant-menu-light.ant-menu-horizontal >.ant-menu-submenu-open::after,
+.ant-menu-light.ant-menu-horizontal >.ant-menu-submenu-active::after
 {
     border-bottom-color: white !important;
     border-bottom-width: 2px !important;
