--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,19 @@ body {
     animation: fadeInAnimation ease 2s;
 }
 
+@-webkit-keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+@-webkit-keyframes fadeOut {
+    from { opacity: 1; }
+    to { opacity: 0; }
+}
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
