--- a/src/components/authentication/authentication.css
+++ b/src/components/authentication/authentication.css
@@ -34,3 +34,7 @@ input:-webkit-autofill:active {
     max-height: 1000px; /* Adjust as necessary */
     opacity: 1;
 }
+
+body {
+    background-color: var(--primary-background);
+}
