--- a/src/components/util/upload/upload.css
+++ b/src/components/util/upload/upload.css
@@ -2,10 +2,34 @@
     border-color: var(--primary-color) !important;
 }
 
+.ant-upload-list-item {
+    transition: box-shadow 0.5s ease-in-out !important;
+}
+
 .ant-upload-list-item:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19) !important;
 }
 .ant-upload-list-item-thumbnail {
     width: 100%;
     height: 100%;
+}
+
+.ant-upload-list-picture-card {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+}
+
+.ant-upload-list-item-container {
+    border-radius: 4px;
+    background-color: var(--primary-background) !important;
+}
+
+.ant-upload-list-item-done {
+    transition: all .5s ease-in-out !important;
+    cursor: pointer !important;
+}
+
+.ant-upload-list-item-done:hover {
+    border-radius: 4px !important;
 }
