--- a/src/components/util/upload/upload.css
+++ b/src/components/util/upload/upload.css
@@ -4,6 +4,7 @@
 
 .ant-upload-list-item {
     transition: box-shadow 0.5s ease-in-out !important;
+
 }
 
 .ant-upload-list-item:hover {
@@ -18,11 +19,20 @@
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
+    height: 200px !important;
 }
 
 .ant-upload-list-item-container {
-    border-radius: 4px;
+    border-radius: 4px !important;
     background-color: var(--primary-background) !important;
+    height: 200px !important;
+    width: 200px !important;
+}
+.ant-upload-select{
+    height: 200px !important;
+    width: 200px !important;
+    font-size: large !important;
+    font-weight: bold !important;
 }
 
 .ant-upload-list-item-done {
