Fized css input issues

--- a/src/components/authentication/authentication.css
+++ b/src/components/authentication/authentication.css
@@ -38,3 +38,7 @@ input:-webkit-autofill:active {
 body {
     background-color: var(--primary-background);
 }
+
+.ant-select-dropdown {
+    background: white !important;
+}
