--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,23 +2,48 @@
     height: 50px !important
 }
 
-.ant-input-outlined {
+.about-us.ant-input-outlined {
     border: 2px solid #b0b0b0;
     transition: box-shadow 0.5s ease;
     box-shadow: none;
 }
 
-.ant-input-outlined:hover,
-.ant-input-outlined:focus {
+.about-us.ant-input-outlined:hover,
+.about-us.ant-input-outlined:focus {
     border: 2px solid #b0b0b0;
     outline: none;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
 
-.ant-input-outlined:focus {
+.about-us.ant-input-outlined:focus {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .about-us-form {
     min-height: 365px;
+}
+
+.time-picker-timing.ant-picker-outlined:hover,
+.time-picker-timing.ant-picker-outlined:focus
+{
+    border: 1px solid black;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    outline: rgba(0, 0, 0, 0.3);
+}
+
+.time-picker-timing > .ant-picker-active-bar {
+    background: var(--primary-color) !important;
+}
+
+.time-picker-timing > .ant-picker-clear {
+    display: none;
+}
+
+.time-picker-timing:focus-within{
+    border: 1px solid var(--primary-color) !important;
+    box-shadow: 0 0 2px ;
+}
+
+.time-switch.ant-switch-checked {
+    background: var(--primary-color) !important;
 }
