--- a/src/components/authentication/authentication.css
+++ b/src/components/authentication/authentication.css
@@ -11,7 +11,7 @@ input:-webkit-autofill:active {
     color: #ece7e2 !important;
 }
 
-.ant-select-selector {
+.authentication-select .ant-select-selector {
     text-align: left !important;
     color: #ece7e2;
     background: none !important;
@@ -19,7 +19,7 @@ input:-webkit-autofill:active {
     box-shadow: none !important;
 }
 
-.ant-select-selector:focus {
+.authentication-select .ant-select-selector:focus {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19) !important;
 }
 
@@ -31,10 +31,14 @@ input:-webkit-autofill:active {
 }
 
 .expandable-element.expanded {
-    max-height: 1000px; /* Adjust as necessary */
+    max-height: 1000px;
     opacity: 1;
 }
 
 body {
     background-color: var(--primary-background);
+}
+
+.authentication-select .ant-select-dropdown {
+    background: white !important;
 }
