--- a/src/components/template1/layout/style.css
+++ b/src/components/template1/layout/style.css
@@ -9,21 +9,16 @@
     background: white;
     box-shadow: inset 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
-.background-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0);
-    transition: background-color 0.3s;
+
+.drawer-nav-item{
+    transition: all ease-in-out 0.3s;
 }
 
-.drawer-nav-item:focus .background-overlay {
-    background-color: rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s;
+.drawer-nav-item:hover {
+    background: #9f9d9d;
+    color: white;
 }
 
-.nav-bar-drawer .ant-drawer-header {
+.nav-bar-drawer >div .ant-drawer-header {
     border-bottom: none !important;
 }
