--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -87,3 +87,23 @@
 .timing-select > div .ant-select-selection-item {
     color: black !important;
 }
+
+.contact-input {
+    min-width: 350px !important;
+    max-width: 100px !important;
+    color: black !important;
+    border: none !important;
+    border-radius: 0 !important;
+    border-bottom: 1px solid #a1a1a1 !important;
+    max-height: 30px !important;
+
+}
+
+.contact-input:focus {
+    border: none;
+    box-shadow: none;
+}
+
+.contact-button {
+
+}
