--- a/src/index.css
+++ b/src/index.css
@@ -5,22 +5,33 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Indie Flower';
+    src: url('/src/fonts/IndieFlower-Regular.ttf') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Oswald';
+    src: url('/src/fonts/Oswald-VariableFont_wght.ttf') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 :root {
     --primary-color: #614044;
     --primary-background: #dedede;
     --primary-warning: #f54242
 }
 
-html, body {
+body {
+    animation: fadeIn ease-in .8s;
     min-height: 100%;
     min-width: 100%;
     margin: 0;
     background: var(--primary-background);
     font-family: 'Montserrat', sans-serif
-}
-
-body {
-    animation: fadeIn ease-in .8s;
 }
 
 @-webkit-keyframes fadeIn {
@@ -127,4 +138,13 @@ body {
     display: none;
 }
 
+.instagram:hover {
+    color: #C13584 !important;
+}
 
+.facebook:hover {
+    color: #1877F2 !important;
+}
+.youtube:hover {
+    color: #FF0000 !important;
+}
