--- a/src/components/home/style.css
+++ b/src/components/home/style.css
@@ -12,6 +12,14 @@
     min-height: 1.5em;
 }
 
+.digitized-div {
+    transition: all ease-in-out 0.1s;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.digitized-div:active {
+    box-shadow: none;
+}
 @keyframes blink-caret {
     50% {
         border-color: transparent;
